--- a/README
+++ b/README
@@ -5,6 +5,7 @@ This is my custom dwm 6.2 setup with additional key bindings and patch plugins
 * systray patch
 * fullgaps patch
 * Custom key bindings
+* Alternative tags indicators
 
 ## Additional key bindings
 * Win key as mod key
