--- a/README
+++ b/README
@@ -7,6 +7,7 @@ This is my custom dwm 6.2 setup with additional key bindings and patch plugins
 * Custom key bindings
 * Alternative tags indicators
 * Hidden window titles
+* No borders around windows
 
 
 ## Additional key bindings
