Add maximize toggle for floating windows

--- a/README
+++ b/README
@@ -8,7 +8,7 @@ This is my custom dwm 6.2 setup with additional key bindings and patch plugins
 * Alternative tags indicators
 * Hidden window titles
 * No borders around windows
-
+* Maximize patch for floating windows
 
 ## Additional key bindings
 * Win key as mod key
@@ -17,6 +17,7 @@ This is my custom dwm 6.2 setup with additional key bindings and patch plugins
 * XF86WebCam - open cheese
 * Media keys for brightness
 * Media keys for volume (with custom script for volume increase that allows to go beyond 100%, but not above 205%)
+* Toggle maximize of floating window with mod+shift+M
 
 ## Original description
 dwm - dynamic window manager
